# ot-harjoitustyo

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
data/: energy-prices-2022-12-13.json  energy-prices.json
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: t1_monopoli.md  t2_laajennettu_monopoli.md  t3_sekvenssikaavio.md  t4_laajempi_sekvenssikaavio.md
src/: config.py  database.py  datasources.py  entities.py  gui.py  record.py  repositories.py  saehaekkae.py  services.py  settings.py  start_gui.py  utils.py
src/datasources/: __init__.py  fetch_energy_consumption.py  fetch_energy_price.py
src/entities/: __init__.py  messages.py  record.py  selection.py  sources.py
src/repositories/: database.py
src/services/: __init__.py  dataservice.py  datetimepicker.py  messageservice.py
src/tests/: __init__.py  test_database.py  test_entities.py  test_fetch.py  test_fetch_energy_price.py  test_record.py  test_repositories.py  test_saehaekkae.py  test_services.py  test_sources.py  test_utils.py
src/ui/: __init__.py  gui.py  tui.py
