[tool.poetry]
name = "saehaekkae"
version = "0.1.0"
description = "Sähäkkä Sähkövahti!"
authors = ["Jukka Aho <ahojukka5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
