[tool.poetry]
name = "saehaekkae"
version = "0.1.0"
description = "Sähäkkä Sähkövahti!"
authors = ["Jukka Aho <ahojukka5@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
requests = "^2.28.1"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
python-dotenv = "^0.21.0"
google-api-python-client = "^2.70.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
coverage = "^6.5.0"
pylint = "^2.15.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
